<resources>

    <string name="app_name">Up n Abouts</string>

    <string name="add_me_button">Add me</string>
    <string name="already_going">already going:</string>
    <string name="title_activity_already_going">Already Going</string>
    <string name="add_friend_button">Add friend</string>

    <string name="sign_in_btn">Sign in</string>
    <string name="passHint">Password</string>
    <string name="uNameHint">Username</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="button_search">Search</string>

</resources>
